--- a/slides/exam-explanation-csp-j-2023.html
+++ b/slides/exam-explanation-csp-j-2023.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
 	</head>
 	<body>
-		<div class="reveal" style="50% -50% auto 3%">
+		<div class="reveal">
 			<header class="mytitle">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">CSP-J 2023 真题</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
