--- a/slides/index.html
+++ b/slides/index.html
@@ -17,7 +17,7 @@
 				<p><a href="/">考鼎<span>&reg;</span>学堂：魏永明系列课程</a> / PLZS</p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides">
+			<div class="slides move-left">
 				<section>
 					<section>
 						<h3>零基础普及</h3>
@@ -195,7 +195,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				width: 1024,
-				height: 768,
+				height: 1024,
 				margin: 0.04,
 				hash: true,
 				slideNumber: true,
