--- a/slides/using-linux-desktop-system.html
+++ b/slides/using-linux-desktop-system.html
@@ -17,7 +17,7 @@
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">使用 Linux 桌面系统</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides">
+			<div class="slides move-left">
 				<section data-markdown="gitlab/using-linux-desktop-system.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
@@ -43,7 +43,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				width: 1024,
-				height: 768,
+				height: 1024,
 				margin: 0.04,
 				hash: true,
 				slideNumber: true,
