--- a/slides/exam-explanation-csp-j-2023.html
+++ b/slides/exam-explanation-csp-j-2023.html
@@ -6,7 +6,7 @@
 		<title>面向十岁及以上学生的编程实战系列课程：CSP-J 2023 真题</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/solarized.css">
+		<link rel="stylesheet" href="/dist/theme/solarized-large.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
