--- a/slides/index.html
+++ b/slides/index.html
@@ -162,6 +162,7 @@
 						<h3>杂项</h3>
 						<ol>
 							<li><a href="misc-what-is-informatics.html">什么是信息学</a></li>
+							<li><a href="misc-introduction-to-plzs.html">面向十岁以上信息学课程体系介绍</a></li>
 						<ol>
 					</section>
 					<section>
