--- a/slides/misc-introduction-to-plzs.html
+++ b/slides/misc-introduction-to-plzs.html
@@ -20,7 +20,7 @@
 					<a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a>
 				</p>
 			</header>
-			<div class="slides">
+			<div class="slides move-left">
 				<section data-markdown="gitlab/misc-introduction-to-plzs.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
@@ -46,7 +46,7 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: 1920,
+				width: 1080,
 				height: 1080,
 				margin: 0.04,
 				center: true,
