--- a/slides/misc-introduction-to-plzs.html
+++ b/slides/misc-introduction-to-plzs.html
@@ -20,7 +20,7 @@
 					<a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a>
 				</p>
 			</header>
-			<div class="slides move-left">
+			<div class="slides move-left-4x3">
 				<section data-markdown="gitlab/misc-introduction-to-plzs.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
