--- a/slides/index.html
+++ b/slides/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>计算机技术系列教程：面向十岁及以上学生的编程实战系列课程</title>
+		<title>计算机技术系列教程：信息学系列课程</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
@@ -162,7 +162,7 @@
 						<h3>杂项</h3>
 						<ol>
 							<li><a href="misc-what-is-informatics.html">什么是信息学</a></li>
-							<li><a href="misc-introduction-to-plzs.html">面向十岁以上信息学课程体系介绍</a></li>
+							<li><a href="misc-introduction-to-plzs.html">信息学课程体系介绍</a></li>
 						<ol>
 					</section>
 					<section>
