--- a/slides/misc-introduction-to-plzs.html
+++ b/slides/misc-introduction-to-plzs.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>魏永明的信息学系列课程 - 面向十岁及以上学生的信息学系列课程介绍</title>
+		<title>魏永明的信息学系列课程 - 课程介绍</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/math-rose.css">
