--- a/slides/misc-introduction-to-plzs.html
+++ b/slides/misc-introduction-to-plzs.html
@@ -6,7 +6,7 @@
 		<title>魏永明的信息学系列课程 - 课程介绍</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/math-rose.css">
+		<link rel="stylesheet" href="/dist/theme/sky.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
