--- a/slides/index.html
+++ b/slides/index.html
@@ -20,17 +20,12 @@
 			<div class="slides move-left">
 				<section>
 					<section>
-						<h3>零基础普及</h3>
+						<h3>零基础入门到 Python 实战</h3>
 						<ol>
 							<li><a href="preparing-ubuntu-linux.html">准备开发环境</a></li>
 							<li><a href="using-linux-desktop-system.html">使用 Linux 桌面系统</a></li>
 							<li><a href="my-first-python-program.html">我的第一个 Python 程序</a></li>
 							<li><a href="my-first-open-source-repository.html">我的第一个开源仓库</a></li>
-						</ol>
-					</section>
-					<section>
-						<h3>Python 实战</h3>
-						<ol>
 							<li><a href="python-flow-control.html">Python 流程控制</a></li>
 							<li><a href="python-data-types.html">Python 数据类型</a></li>
 							<li><a href="python-standard-library.html">Python 标准库</a></li>
