--- a/slides/index.html
+++ b/slides/index.html
@@ -83,7 +83,18 @@
 						</ol>
 					</section>
 					<section>
-						<h3>信息学的数学基础/程序员的数学素养课</h3>
+						<h3>信奥生的数学素养课</h3>
+						<h4>数系及初等数论</h4>
+						<ol>
+							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
+							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
+							<li><a href="math-integers.html">数论基础：整数的性质</a></li>
+							<li><a href="math-primes.html">质数的有趣性质及数论基础</a></li>
+							<li><a href="math-number-theory.html">初等数论主要定理及其应用</a></li>
+						</ol>
+					</section>
+					<section>
+						<h3>信息学的数学基础</h3>
 						<h4>数系及其运算</h4>
 						<ol>
 							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
@@ -99,7 +110,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>信息学的数学基础/程序员的数学素养课</h3>
+						<h3>信息学的数学基础</h3>
 						<h4>离散数学结构</h4>
 						<ol>
 							<li><a href="math-discrete-fundamentals.html">离散数学基础</a></li>
@@ -115,7 +126,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>信息学的数学基础/程序员的数学素养课</h3>
+						<h3>信息学的数学基础</h3>
 						<h4>编解码</h4>
 						<ol>
 							<li><a href="math-binary-arithmetic.html">二进制运算及数值的计算机表达</a></li>
