--- a/slides/index.html
+++ b/slides/index.html
@@ -50,7 +50,7 @@
 							<li><a href="noijunior-basic-algorithms.html">基础算法和基础数据结构</a></li>
 							<li><a href="noijunior-sort-algorithms.html">排序算法</a></li>
 							<li><a href="noijunior-linear-data-structures.html">线性数据结构</a></li>
-							<li><a href="noijunior-tree-data-structures.html">树型数据结构</a></li>
+							<li><a href="noijunior-tree-data-structures.html">树形数据结构</a></li>
 							<li><a href="noijunior-midterm-project.html">中期综合练习</a></li>
 							<li><a href="noijunior-search-algorithms.html">搜索算法</a></li>
 							<li><a href="noijunior-graph-and-graph-theory.html">图及图论算法</a></li>
@@ -65,7 +65,7 @@
 							<li><a href="noisenior-cpp-advanced-features.html">C++ 编程语言的高级特性</a></li>
 							<li><a href="noisenior-string-algorithms.html">字符串相关算法</a></li>
 							<li><a href="noisenior-memory-management.html">通用操作系统的内存管理</a></li>
-							<li><a href="noisenior-tree-data-structures.html">高级树型数据结构</a></li>
+							<li><a href="noisenior-tree-data-structures.html">高级树形数据结构</a></li>
 							<li><a href="noisenior-midterm-project.html">中期综合练习</a></li>
 							<li><a href="noisenior-search-algorithms.html">高级搜索算法</a></li>
 							<li><a href="noisenior-dynamic-programming.html">动态规划</a></li>
@@ -120,7 +120,7 @@
 							<li><a href="math-discrete-functions.html">函数</a></li>
 							<li><a href="math-discrete-graphy-theory.html">图论基础</a></li>
 							<li><a href="math-discrete-order-relations-structures.html">有序关系及结构</a></li>
-							<li><a href="math-discrete-tree.html">树型结构</a></li>
+							<li><a href="math-discrete-tree.html">树形结构</a></li>
 							<li><a href="math-discrete-semigroups-and-groups.html">半群和群</a></li>
 							<li><a href="math-discrete-languages-and-finite-state-machine.html">语言和有限状态机</a></li>
 						</ol>
