--- a/slides/noijunior-tree-data-structures.html
+++ b/slides/noijunior-tree-data-structures.html
@@ -36,6 +36,7 @@
 		<script src="/plugin/notes/notes.js"></script>
 		<script src="/plugin/markdown/markdown.js"></script>
 		<script src="/plugin/highlight/highlight.js"></script>
+		<script src="/plugin/math/math.js"></script>
 		<script src="/js/utils/code-copy.js"></script>
 		<script>
 			// More info about initialization & config:
@@ -48,7 +49,7 @@
 				hash: true,
 				slideNumber: true,
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath ]
 			}).then(() => initCodeCopy());
 		</script>
 	</body>
