--- a/slides/noijunior-midterm-project.html
+++ b/slides/noijunior-midterm-project.html
@@ -46,6 +46,7 @@
 				height: 1024,
 				margin: 0.04,
 				hash: true,
+				center: false,
 				slideNumber: true,
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
