--- a/slides/index.html
+++ b/slides/index.html
@@ -150,6 +150,12 @@
 						</ol>
 					</section>
 					<section>
+						<h3>信息学启蒙课</h3>
+						<ol>
+							<li><a href="enlightenment-end-on-system.html">进制</a></li>
+						</ol>
+					</section>
+					<section>
 						<h3>AI 实战班</h3>
 						<ol>
 							<li><a href="fullstack-basic-of-web.html">Web 相关背景知识</a></li>
