--- a/slides/enlightenment-end-on-system.html
+++ b/slides/enlightenment-end-on-system.html
@@ -17,7 +17,7 @@
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（进制）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides move-left">
+			<div class="slides">
 				<section data-markdown="gitlab/enlightenment-end-on-system.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
@@ -43,7 +43,7 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: 1024,
+				width: 1920,
 				height: 1024,
 				margin: 0.04,
 				hash: true,
