--- a/slides/enlightenment-end-on-system.html
+++ b/slides/enlightenment-end-on-system.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="/plugin/highlight/school-book.css">
 	</head>
 	<body>
-		<div class="reveal">
+		<div class="reveal move-left">
 			<header class="mytitle">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（进制）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
@@ -43,8 +43,8 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: 1920,
-				height: 1080,
+				width: 1024,
+				height: 768,
 				margin: 0.04,
 				hash: true,
 				slideNumber: true,
