--- a/slides/enlightenment-end-on-system.html
+++ b/slides/enlightenment-end-on-system.html
@@ -12,12 +12,12 @@
 		<link rel="stylesheet" href="/plugin/highlight/school-book.css">
 	</head>
 	<body>
-		<div class="reveal move-left">
+		<div class="reveal">
 			<header class="mytitle">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（进制）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides">
+			<div class="slides move-left">
 				<section data-markdown="gitlab/enlightenment-end-on-system.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
@@ -44,7 +44,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				width: 1024,
-				height: 768,
+				height: 1024,
 				margin: 0.04,
 				hash: true,
 				slideNumber: true,
