--- a/slides/enlightenment-concept-of-algorithm.html
+++ b/slides/enlightenment-concept-of-algorithm.html
@@ -6,7 +6,7 @@
 		<title>魏永明的信息学系列课程：信息学启蒙（算法的概念）</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/solarized.css">
+		<link rel="stylesheet" href="/dist/theme/league.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/school-book.css">
