--- a/slides/enlightenment-concept-of-algorithm.html
+++ b/slides/enlightenment-concept-of-algorithm.html
@@ -48,6 +48,7 @@
 				margin: 0.04,
 				hash: true,
 				slideNumber: true,
+				center: false,
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath ]
 			}).then(() => initCodeCopy());
