--- a/slides/index.html
+++ b/slides/index.html
@@ -153,7 +153,7 @@
 						<h3>信息学启蒙课</h3>
 						<ol>
 							<li><a href="enlightenment-end-on-system.html">进制</a></li>
-							<li><a href="enlightenment-concept-of-algorithm.html">算法及其描述</a></li>
+							<li><a href="enlightenment-concept-of-algorithm.html">算法</a></li>
 						</ol>
 					</section>
 					<section>
