--- a/slides/index.html
+++ b/slides/index.html
@@ -154,6 +154,7 @@
 						<ol>
 							<li><a href="enlightenment-end-on-system.html">进制</a></li>
 							<li><a href="enlightenment-concept-of-algorithm.html">算法</a></li>
+							<li><a href="enlightenment-number-theory.html">数论</a></li>
 						</ol>
 					</section>
 					<section>
