--- a/slides/index.html
+++ b/slides/index.html
@@ -155,7 +155,7 @@
 							<li><a href="enlightenment-end-on-system.html">进制</a></li>
 							<li><a href="enlightenment-concept-of-algorithm.html">算法</a></li>
 							<li><a href="enlightenment-number-theory.html">数论</a></li>
-							<li><a href="enlightenment-recurrence-and-recursion.html">递归和递归</a></li>
+							<li><a href="enlightenment-recurrence-and-recursion.html">递推和递归</a></li>
 						</ol>
 					</section>
 					<section>
