--- a/slides/enlightenment-concept-of-algorithm.html
+++ b/slides/enlightenment-concept-of-algorithm.html
@@ -17,7 +17,7 @@
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（算法）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides move-left narrow">
+			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-concept-of-algorithm.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
