--- a/slides/index.html
+++ b/slides/index.html
@@ -153,9 +153,15 @@
 						<h3>信息学启蒙课</h3>
 						<ol>
 							<li><a href="enlightenment-end-on-system.html">进制</a></li>
-							<li><a href="enlightenment-concept-of-algorithm.html">算法</a></li>
+							<li><a href="enlightenment-concept-of-algorithm.html">算法的概念</a></li>
 							<li><a href="enlightenment-number-theory.html">数论</a></li>
 							<li><a href="enlightenment-recurrence-and-recursion.html">递推和递归</a></li>
+							<li><a href="enlightenment-combinatorics.html">组合数学</a></li>
+							<li><a href="enlightenment-graph-and-graph-theory.html">图和图论</a></li>
+							<li><a href="enlightenment-binary-and-logical-operations.html">二进制和逻辑运算</a></li>
+							<li><a href="enlightenment-binary-tree.html">二叉树及其应用</a></li>
+							<li><a href="enlightenment-basic-algorithms.html">基础算法</a></li>
+							<li><a href="enlightenment-dynamic-programming.html">动态规划</a></li>
 						</ol>
 					</section>
 					<section>
