--- a/slides/index.html
+++ b/slides/index.html
@@ -20,7 +20,7 @@
 			<div class="slides move-left">
 				<section>
 					<section>
-						<h3>信息学启蒙课</h3>
+						<h3>信息学启蒙</h3>
 						<ol>
 							<li><a href="enlightenment-end-on-system.html">进制的概念</a></li>
 							<li><a href="enlightenment-concept-of-algorithm.html">算法的概念</a></li>
