--- a/slides/index.html
+++ b/slides/index.html
@@ -19,7 +19,7 @@
 			</header>
 			<div class="slides move-left">
 				<section>
-					<section>
+					<section id="enlightenment">
 						<h3>信息学启蒙</h3>
 						<ol>
 							<li><a href="enlightenment-end-on-system.html">进制的概念</a></li>
@@ -34,7 +34,7 @@
 							<li><a href="enlightenment-dynamic-programming.html">动态规划</a></li>
 						</ol>
 					</section>
-					<section>
+					<section id="python">
 						<h3>零基础入门到 Python 实战</h3>
 						<ol>
 							<li><a href="preparing-ubuntu-linux.html">准备开发环境</a></li>
@@ -48,7 +48,7 @@
 							<li><a href="python-project-coaching.html">Python 综合练习辅导</a></li>
 						</ol>
 					</section>
-					<section>
+					<section id="cplusplus">
 						<h3>信奥筑基/C++ 编程语言</h3>
 						<ol>
 							<li><a href="cpp-quick-start.html">C++ 快速入门</a></li>
@@ -59,7 +59,7 @@
 							<li><a href="cpp-arbitrary-precision-arithmetic.html">任意精度算术的 C++ 实现</a></li>
 						</ol>
 					</section>
-					<section>
+					<section id="cspjunior">
 						<h3>信奥初级/信息学算法和数据结构入门</h3>
 						<ol>
 							<li><a href="noijunior-basic-algorithms.html">基础算法和基础数据结构</a></li>
@@ -74,7 +74,7 @@
 							<li><a href="noijunior-term-project.html">结业综合练习</a></li>
 						</ol>
 					</section>
-					<section>
+					<section id="cspsenior">
 						<h3>信奥提高/信息学算法和数据结构提高</h3>
 						<ol>
 							<li><a href="noisenior-cpp-advanced-features.html">C++ 编程语言的高级特性</a></li>
@@ -89,15 +89,15 @@
 							<li><a href="noisenior-term-project.html">结业综合练习</a></li>
 						</ol>
 					</section>
-					<section>
-						<h3>数学和程序的完美结合</h3>
+					<section id="classicTopics">
+						<h3>经典主题讲解</h3>
 						<ol>
-							<li><a href="classical-programming-problems-number-theory.html">经典编程题-数论相关</a></li>
+							<li><a href="classical-programming-problems-number-theory.html">-数论相关</a></li>
 							<li><a href="exam-explanation-cpp-ability-test.html">C++ 编程语言能力测试</a></li>
 							<li><a href="exam-explanation-csp-j-2023.html">CSP-J 2023 真题</a></li>
 						</ol>
 					</section>
-					<section>
+					<section id="math0">
 						<h3>信奥生的数学素养课</h3>
 						<h4>数系及初等数论</h4>
 						<ol>
@@ -108,7 +108,7 @@
 							<li><a href="math-number-theory.html">初等数论主要定理及其应用</a></li>
 						</ol>
 					</section>
-					<section>
+					<section id="math1">
 						<h3>信息学的数学基础</h3>
 						<h4>数系及其运算</h4>
 						<ol>
@@ -124,7 +124,7 @@
 							<li><a href="math-irrational-numbers-pi-and-e.html">圆周率、自然常数及其计算</a></li>
 						</ol>
 					</section>
-					<section>
+					<section id="math2">
 						<h3>信息学的数学基础</h3>
 						<h4>离散数学结构</h4>
 						<ol>
@@ -140,7 +140,7 @@
 							<li><a href="math-discrete-languages-and-finite-state-machine.html">语言和有限状态机</a></li>
 						</ol>
 					</section>
-					<section>
+					<section id="math3">
 						<h3>信息学的数学基础</h3>
 						<h4>编解码</h4>
 						<ol>
@@ -156,7 +156,7 @@
 							<li><a href="math-asymmetric-encryption-and-decryption.html">非对称加解密</a></li>
 						</ol>
 					</section>
-					<section>
+					<section id="math4">
 						<h3>信息学的数学基础/程序员的数学素养课</h3>
 						<h4>其他主题</h4>
 						<ol>
@@ -164,8 +164,8 @@
 							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
 						</ol>
 					</section>
-					<section>
-						<h3>AI 实战班</h3>
+					<section id="fullstack">
+						<h3>AI 全栈</h3>
 						<ol>
 							<li><a href="fullstack-basic-of-web.html">Web 相关背景知识</a></li>
 							<li><a href="fullstack-setting-up-linux-server.html">架设 Linux 服务器</a></li>
@@ -179,14 +179,14 @@
 							<li><a href="fullstack-deploying-and-operations.html">服务的部署和运维</a></li>
 						<ol>
 					</section>
-					<section>
+					<section id="misc">
 						<h3>杂项</h3>
 						<ol>
 							<li><a href="misc-what-is-informatics.html">什么是信息学</a></li>
 							<li><a href="misc-introduction-to-plzs.html">信息学课程体系介绍</a></li>
 						<ol>
 					</section>
-					<section>
+					<section id="repo">
 						<h3>课程仓库</h3>
 						<p><a target="_blank" href="https://github.com/VincentWei/PLZS">GitHub.COM</a></p>
 						<p><a target="_blank" href="https://gitee.com/vincentwei7/PLZS">Gitee.COM</a></p>
