--- a/slides/index.html
+++ b/slides/index.html
@@ -157,7 +157,7 @@
 						</ol>
 					</section>
 					<section id="math4">
-						<h3>信息学的数学基础/程序员的数学素养课</h3>
+						<h3>信息学的数学基础</h3>
 						<h4>其他主题</h4>
 						<ol>
 							<li><a href="math-pythagorean-theorem.html">勾股定理的几种证明</a></li>
@@ -179,18 +179,18 @@
 							<li><a href="fullstack-deploying-and-operations.html">服务的部署和运维</a></li>
 						<ol>
 					</section>
-					<section id="misc">
-						<h3>杂项</h3>
-						<ol>
-							<li><a href="misc-what-is-informatics.html">什么是信息学</a></li>
-							<li><a href="misc-introduction-to-plzs.html">信息学课程体系介绍</a></li>
-						<ol>
-					</section>
-					<section id="repo">
-						<h3>课程仓库</h3>
-						<p><a target="_blank" href="https://github.com/VincentWei/PLZS">GitHub.COM</a></p>
-						<p><a target="_blank" href="https://gitee.com/vincentwei7/PLZS">Gitee.COM</a></p>
-					</section>
+				</section>
+				<section id="misc">
+					<h3>杂项</h3>
+					<ol>
+						<li><a href="misc-what-is-informatics.html">什么是信息学</a></li>
+						<li><a href="misc-introduction-to-plzs.html">信息学课程体系介绍</a></li>
+					<ol>
+				</section>
+				<section id="repo">
+					<h3>课程仓库</h3>
+					<p><a target="_blank" href="https://github.com/VincentWei/PLZS">GitHub.COM</a></p>
+					<p><a target="_blank" href="https://gitee.com/vincentwei7/PLZS">Gitee.COM</a></p>
 				</section>
 				<section id="grand-finale">
 					<h2>扫一扫</h2>
