--- a/slides/index.html
+++ b/slides/index.html
@@ -26,11 +26,11 @@
 							<li><a href="enlightenment-concept-of-algorithm.html">算法的概念</a></li>
 							<li><a href="enlightenment-number-theory.html">数论基础</a></li>
 							<li><a href="enlightenment-function-and-recursion.html">函数和递归</a></li>
+							<li><a href="enlightenment-binary-and-logical-operations.html">二进制和逻辑运算</a></li>
+							<li><a href="enlightenment-basic-data-structures.html">基础数据结构</a></li>
+							<li><a href="enlightenment-basic-algorithms.html">基础算法</a></li>
 							<li><a href="enlightenment-combinatorics.html">组合数学</a></li>
 							<li><a href="enlightenment-graph-and-graph-theory.html">图和图论</a></li>
-							<li><a href="enlightenment-binary-and-logical-operations.html">二进制和逻辑运算</a></li>
-							<li><a href="enlightenment-tree-data-structures.html">树形数据结构</a></li>
-							<li><a href="enlightenment-basic-algorithms.html">基础算法</a></li>
 							<li><a href="enlightenment-dynamic-programming.html">动态规划</a></li>
 						</ol>
 					</section>
