--- a/slides/index.html
+++ b/slides/index.html
@@ -22,6 +22,7 @@
 					<section id="enlightenment">
 						<h3>信息学启蒙</h3>
 						<ol>
+							<li><a href="enlightenment-arithmetic-and-algebra.html">算数和代数基础</a></li>
 							<li><a href="enlightenment-end-on-system.html">进制的概念</a></li>
 							<li><a href="enlightenment-concept-of-algorithm.html">算法的概念</a></li>
 							<li><a href="enlightenment-number-theory.html">数论基础</a></li>
