try to use local link for mathjax2

--- a/slides/enlightenment-arithmetic-and-algebra.html
+++ b/slides/enlightenment-arithmetic-and-algebra.html
@@ -48,6 +48,9 @@
 				margin: 0.04,
 				hash: true,
 				slideNumber: true,
+				mathjax2: {
+					mathjax: '/plugin/math/mathjax2.js'
+				},
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath ]
 			}).then(() => initCodeCopy());
