--- a/slides/enlightenment-arithmetic-and-algebra.html
+++ b/slides/enlightenment-arithmetic-and-algebra.html
@@ -49,7 +49,7 @@
 				hash: true,
 				slideNumber: true,
 				mathjax2: {
-					mathjax: 'https://courses.fmsoft.cn//plugin/math/mathjax2.js'
+					mathjax: 'https://courses.fmsoft.cn/js/mathjax2/MathJax.js'
 				},
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath ]
