--- a/slides/enlightenment-arithmetic-and-algebra.html
+++ b/slides/enlightenment-arithmetic-and-algebra.html
@@ -48,11 +48,11 @@
 				margin: 0.04,
 				hash: true,
 				slideNumber: true,
-				mathjax2: {
-					mathjax: 'https://courses.fmsoft.cn/js/mathjax2/MathJax.js'
+				mathjax3: {
+					mathjax: 'https://courses.fmsoft.cn/js/mathjax3/tex-mml-chtml.js'
 				},
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath.MathJax3 ]
 			}).then(() => initCodeCopy());
 		</script>
 	</body>
