--- a/slides/classical-programming-problems-number-theory.html
+++ b/slides/classical-programming-problems-number-theory.html
@@ -48,8 +48,11 @@
 				margin: 0.04,
 				hash: true,
 				slideNumber: true,
+				mathjax3: {
+					mathjax: 'https://courses.fmsoft.cn/js/mathjax3/tex-mml-chtml.js'
+				},
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath.MathJax3 ]
 			}).then(() => initCodeCopy());
 		</script>
 	</body>
