--- a/slides/index.html
+++ b/slides/index.html
@@ -93,7 +93,7 @@
 					<section id="classicTopics">
 						<h3>经典主题讲解</h3>
 						<ol>
-							<li><a href="classical-programming-problems-number-theory.html">-数论相关</a></li>
+							<li><a href="classical-programming-problems-number-theory.html">数论相关</a></li>
 							<li><a href="exam-explanation-cpp-ability-test.html">C++ 编程语言能力测试</a></li>
 							<li><a href="exam-explanation-csp-j-2023.html">CSP-J 2023 真题</a></li>
 						</ol>
