--- a/slides/enlightenment-function-and-recursion.html
+++ b/slides/enlightenment-function-and-recursion.html
@@ -17,7 +17,7 @@
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（函数和递归）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides move-left">
+			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-function-and-recursion.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
