--- a/slides/index.html
+++ b/slides/index.html
@@ -31,6 +31,7 @@
 							<li><a href="enlightenment-fundamentals-of-geometry.html">几何基础</a></li>
 							<li><a href="enlightenment-combinatorics.html">组合数学</a></li>
 							<li><a href="enlightenment-graph-and-graph-theory.html">图和图论</a></li>
+							<li><a href="enlightenment-basic-data-structures.html">基础数据结构</a></li>
 						</ol>
 					</section>
 					<section id="python">
