--- a/slides/index.html
+++ b/slides/index.html
@@ -32,6 +32,7 @@
 							<li><a href="enlightenment-combinatorics.html">组合数学</a></li>
 							<li><a href="enlightenment-graph-and-graph-theory.html">图和图论</a></li>
 							<li><a href="enlightenment-basic-data-structures.html">基础数据结构</a></li>
+							<li><a href="enlightenment-basic-algorithms.html">基础算法</a></li>
 						</ol>
 					</section>
 					<section id="python">
