--- a/slides/index.html
+++ b/slides/index.html
@@ -21,18 +21,18 @@
 				<section>
 					<section id="enlightenment">
 						<h3>信息学启蒙</h3>
-						<ol>
-							<li><a href="enlightenment-arithmetic-and-algebra.html">算数和代数基础</a></li>
-							<li><a href="enlightenment-end-on-system.html">进制的概念</a></li>
-							<li><a href="enlightenment-concept-of-algorithm.html">算法的概念</a></li>
-							<li><a href="enlightenment-number-theory.html">数论基础</a></li>
-							<li><a href="enlightenment-real-number-and-function.html">实数和函数</a></li>
-							<li><a href="enlightenment-recurrence-and-recursion.html">递推和递归</a></li>
-							<li><a href="enlightenment-fundamentals-of-geometry.html">几何基础</a></li>
-							<li><a href="enlightenment-combinatorics.html">组合数学</a></li>
-							<li><a href="enlightenment-graph-and-graph-theory.html">图和图论</a></li>
-							<li><a href="enlightenment-basic-data-structures.html">基础数据结构</a></li>
-							<li><a href="enlightenment-basic-algorithms.html">基础算法</a></li>
+						<ol style="list-style-type:none">
+							<li><a href="enlightenment-arithmetic-and-algebra.html">0) 算数和代数基础</a></li>
+							<li><a href="enlightenment-end-on-system.html">1) 进制的概念</a></li>
+							<li><a href="enlightenment-concept-of-algorithm.html">2) 算法的概念</a></li>
+							<li><a href="enlightenment-number-theory.html">3) 数论基础</a></li>
+							<li><a href="enlightenment-real-number-and-function.html">4) 实数和函数</a></li>
+							<li><a href="enlightenment-recurrence-and-recursion.html">5) 递推和递归</a></li>
+							<li><a href="enlightenment-fundamentals-of-geometry.html">6) 几何基础</a></li>
+							<li><a href="enlightenment-combinatorics.html">7) 组合数学</a></li>
+							<li><a href="enlightenment-graph-and-graph-theory.html">8) 图和图论</a></li>
+							<li><a href="enlightenment-basic-data-structures.html">9) 基础数据结构</a></li>
+							<li><a href="enlightenment-basic-algorithms.html">10) 基础算法</a></li>
 						</ol>
 					</section>
 					<section id="python">
