--- a/slides/index.html
+++ b/slides/index.html
@@ -27,7 +27,7 @@
 							<li><a href="enlightenment-concept-of-algorithm.html">2) 算法的概念</a></li>
 							<li><a href="enlightenment-number-theory.html">3) 数论基础</a></li>
 							<li><a href="enlightenment-real-number-and-function.html">4) 实数和函数</a></li>
-							<li><a href="enlightenment-recurrence-formula.html">5) 递推公式</a></li>
+							<li><a href="enlightenment-recurrence-iteration-recursion.html">5) 递推、迭代和递归</a></li>
 							<li><a href="enlightenment-fundamentals-of-geometry.html">6) 几何基础</a></li>
 							<li><a href="enlightenment-combinatorics.html">7) 组合数学</a></li>
 							<li><a href="enlightenment-graph-and-graph-theory.html">8) 图和图论</a></li>
