--- a/slides/enlightenment-spec-of-executable-coding-code.html
+++ b/slides/enlightenment-spec-of-executable-coding-code.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>魏永明的信息学系列课程：信息学启蒙（考鼎码规范）</title>
+		<title>魏永明的信息学系列课程：信息学启蒙（可执行考鼎码规范）</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
@@ -14,11 +14,11 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（考鼎码规范）</a></p>
+				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（可执行考鼎码规范）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<div class="slides move-left narrow-code">
-				<section data-markdown="gitlab/enlightenment-spec-of-coding-code.md"
+				<section data-markdown="gitlab/enlightenment-spec-of-executable-coding-code.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
