--- a/slides/enlightenment-number-theory.html
+++ b/slides/enlightenment-number-theory.html
@@ -47,7 +47,7 @@
 				height: 1024,
 				margin: 0.04,
 				hash: true,
-				center: true, // window.location.href.indexOf("?print-pdf") == -1,
+				center: window.location.href.indexOf("?print-pdf") == -1,
 				slideNumber: true,
 				mathjax3: {
 					mathjax: 'https://courses.fmsoft.cn/js/mathjax3/tex-mml-chtml.js'
