--- a/slides/enlightenment-number-theory.html
+++ b/slides/enlightenment-number-theory.html
@@ -13,9 +13,13 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<header class="mytitle">
+			<header class="screen-title">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（数论基础）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
+			</header>
+			<header class="print-title">
+				<p>考鼎<span>&reg;</span>学堂 / 信息学启蒙（数论基础）</p>
+				<p>姓名：___________；日期：____________</p>
 			</header>
 			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-number-theory.md"
