--- a/slides/enlightenment-number-theory.html
+++ b/slides/enlightenment-number-theory.html
@@ -18,7 +18,7 @@
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<header class="print-title">
-				<p>考鼎<span>&reg;</span>学堂 / 信息学启蒙（数论基础）<span style="float:right">姓名：___________；日期：____________</span></p>
+				<p>考鼎<span>&reg;</span>学堂 / 信息学启蒙（数论基础）姓名：___________；日期：____________</p>
 			</header>
 			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-number-theory.md"
