--- a/slides/enlightenment-number-theory.html
+++ b/slides/enlightenment-number-theory.html
@@ -18,8 +18,8 @@
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<header class="print-title">
-				<p>考鼎<span>&reg;</span>学堂 / 信息学启蒙（数论基础）</p>
-				<p>姓名：_________；日期：_________</p>
+				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（数论基础）</p>
+				<p class="right-part">姓名：_________；日期：_________</p>
 			</header>
 			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-number-theory.md"
