--- a/slides/enlightenment-real-number-and-function.html
+++ b/slides/enlightenment-real-number-and-function.html
@@ -13,9 +13,13 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<header class="mytitle">
+			<header class="screen-title">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（实数和函数）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
+			</header>
+			<header class="print-title">
+				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（实数和函数）</p>
+				<p class="right-part">姓名：_________；日期：_________</p>
 			</header>
 			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-real-number-and-function.md"
@@ -47,6 +51,7 @@
 				height: 1024,
 				margin: 0.04,
 				hash: true,
+				center: window.location.href.indexOf("?print-pdf") == -1,
 				slideNumber: true,
 				mathjax3: {
 					mathjax: 'https://courses.fmsoft.cn/js/mathjax3/tex-mml-chtml.js'
