--- a/slides/enlightenment-concept-of-algorithm.html
+++ b/slides/enlightenment-concept-of-algorithm.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<header class="mytitle">
+			<header class="screen-title">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（算法的概念）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
