--- a/slides/enlightenment-number-theory.html
+++ b/slides/enlightenment-number-theory.html
@@ -47,11 +47,11 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: 1024,
-				height: 1024,
+				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024: 1485,
+				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024: 1050,
+				center: window.location.href.indexOf("?print-pdf") == -1,
 				margin: 0.04,
 				hash: true,
-				center: window.location.href.indexOf("?print-pdf") == -1,
 				slideNumber: true,
 				mathjax3: {
 					mathjax: 'https://courses.fmsoft.cn/js/mathjax3/tex-mml-chtml.js'
