--- a/slides/enlightenment-end-on-system.html
+++ b/slides/enlightenment-end-on-system.html
@@ -47,11 +47,11 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: 1024,
-				height: 1024,
-				margin: 0.04,
-				hash: true,
+				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1050,
+				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1485,
+				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.10,
 				center: window.location.href.indexOf("?print-pdf") == -1,
+				hash: true,
 				slideNumber: true,
 				mathjax3: {
 					mathjax: 'https://courses.fmsoft.cn/js/mathjax3/tex-mml-chtml.js'
