--- a/slides/enlightenment-number-theory.html
+++ b/slides/enlightenment-number-theory.html
@@ -47,10 +47,10 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024: 1050,
-				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024: 1485,
+				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1050,
+				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1485,
+				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.10,
 				center: window.location.href.indexOf("?print-pdf") == -1,
-				margin: 0.04,
 				hash: true,
 				slideNumber: true,
 				mathjax3: {
