--- a/slides/enlightenment-template.html
+++ b/slides/enlightenment-template.html
@@ -13,11 +13,15 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<header class="mytitle">
+			<header class="screen-title">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（模板）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides move-left">
+			<header class="print-title">
+				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（模板）</p>
+				<p class="right-part">姓名：_________；日期：_________</p>
+			</header>
+			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-template.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
