--- a/slides/enlightenment-number-theory.html
+++ b/slides/enlightenment-number-theory.html
@@ -19,7 +19,7 @@
 			</header>
 			<header class="print-title">
 				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（数论基础）</p>
-				<p class="right-part">姓名：_________；日期：_________</p>
+				<p class="right-part">姓名：_____________；日期：_____________</p>
 			</header>
 			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-number-theory.md"
