--- a/slides/enlightenment-spec-of-executable-coding-code.html
+++ b/slides/enlightenment-spec-of-executable-coding-code.html
@@ -17,7 +17,7 @@
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（可执行考鼎码规范）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides move-left narrow-code">
+			<div class="slides narrow-code">
 				<section data-markdown="gitlab/enlightenment-spec-of-executable-coding-code.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
@@ -43,8 +43,8 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1050,
-				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1485,
+				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1280 : 1050,
+				height: (window.location.href.indexOf("?print-pdf") == -1) ? 720 : 1485,
 				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.05,
 				center: window.location.href.indexOf("?print-pdf") == -1,
 				hash: true,
