--- a/slides/enlightenment-spec-of-executable-coding-code.html
+++ b/slides/enlightenment-spec-of-executable-coding-code.html
@@ -17,7 +17,7 @@
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（可执行考鼎码规范）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides wide-table wide-code">
+			<div class="slides wide-table">
 				<section data-markdown="gitlab/enlightenment-spec-of-executable-coding-code.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
