--- a/slides/cpp-flow-control.html
+++ b/slides/cpp-flow-control.html
@@ -17,7 +17,7 @@
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">C++ 流程控制</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides move-left">
+			<div class="slides move-left wide-code">
 				<section data-markdown="gitlab/cpp-flow-control.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
