--- a/slides/index.html
+++ b/slides/index.html
@@ -22,7 +22,7 @@
 					<section id="enlightenment">
 						<h3>信息学启蒙</h3>
 						<ol style="list-style-type:none">
-							<li><a href="enlightenment-arithmetic-and-algebra.html">0) 算数和代数基础</a></li>
+							<li><a href="enlightenment-arithmetic-and-algebra.html">0) 算术和代数基础</a></li>
 							<li><a href="enlightenment-end-on-system.html">1) 进制的概念</a></li>
 							<li><a href="enlightenment-concept-of-algorithm.html">2) 算法的概念</a></li>
 							<li><a href="enlightenment-number-theory.html">3) 数论基础</a></li>
