--- a/slides/index.html
+++ b/slides/index.html
@@ -33,6 +33,7 @@
 							<li><a href="enlightenment-graph-and-graph-theory.html">8) 图和图论</a></li>
 							<li><a href="enlightenment-basic-data-structures.html">9) 基础数据结构</a></li>
 							<li><a href="enlightenment-basic-algorithms.html">10) 基础算法</a></li>
+							<li><a href="enlightenment-spec-of-executable-coding-code.html">附) 可执行考鼎码规范</a></li>
 						</ol>
 					</section>
 					<section id="python">
