--- a/slides/enlightenment-homework-u3.html
+++ b/slides/enlightenment-homework-u3.html
@@ -21,7 +21,7 @@
 				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（算法的概念）</p>
 				<p class="right-part">姓名：_____________；日期：_____________</p>
 			</header>
-			<div class="slides move-left wide-code">
+			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-homework-u3.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
