--- a/slides/enlightenment-homework-u3.html
+++ b/slides/enlightenment-homework-u3.html
@@ -18,7 +18,7 @@
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<header class="print-title">
-				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（算法的概念）</p>
+				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（第三单元作业参考答案）</p>
 				<p class="right-part">姓名：_____________；日期：_____________</p>
 			</header>
 			<div class="slides move-left narrow-code">
